--- a/style_pi_cluster.css
+++ b/style_pi_cluster.css
@@ -22,11 +22,11 @@ h1{
     padding: 12px;
     font-size:40px;
     text-align: center;
-    color:#F8F8F2;
+    color:white ;
     margin:15px;
 }
  
-h2, h3, h4{
+h2{
     color: #4243b2;
     display: flex;
     font-size: 35px;
